--- a/style_header.css
+++ b/style_header.css
@@ -4,7 +4,8 @@ nav {
   background-color: rgb(30, 56, 130);
   padding-top: 4px;
   box-sizing: border-box;
-  position: fixed top;
+  position: fixed;
+  top: 0;
 }
 ul {
   display: flex;
