--- a/style_list.css
+++ b/style_list.css
@@ -46,31 +46,21 @@ h2 {
   margin: auto;
   margin-top: 24px;
 }
-.showed_list {
-  list-style-type: none;
-  padding: 0;
-}
-.showed_list li {
-  padding: 5px 0;
-}
-.book_table {
-  width: 90%;
-  margin: 20px auto;
-  border-collapse: collapse;
-}
 form .form_table td {
   padding: 6px;
 }
 .list {
   background-color: #add8e6;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
 }
 .showed_title {
   text-align: left;
-  width: 30%;
-  padding: 10px;
+  width: fit-content;
 }
 .showed_author {
   text-align: right;
-  width: 30%;
-  padding: 10px;
+  float: right;
+  width: fit-content;
 }
