--- a/style_list.css
+++ b/style_list.css
@@ -45,12 +45,13 @@ h2 {
   width: fit-content;
   margin: auto;
   margin-top: 24px;
+  margin-bottom: 120px;
 }
 form .form_table td {
   padding: 6px;
 }
 .list {
-  background-color: #add8e6;
+  background-color: #b0e0e6;
   border-radius: 10px;
   margin: 10px;
   padding: 10px;
