人間六度を読みなさい。文庫本でいいから買いなさい。

--- a/style_list.css
+++ b/style_list.css
@@ -48,6 +48,7 @@ h2 {
   margin: auto;
   margin-top: 24px;
   margin-bottom: 120px;
+  margin-top: 20px;
 }
 form .form_table td {
   padding: 6px;
