--- a/style_list.css
+++ b/style_list.css
@@ -7,6 +7,24 @@ h2 {
   color: rgb(30, 56, 130);
   text-align: center;
 }
+h3 {
+  color: rgb(30, 56, 130);
+  text-align: center;
+}
+#result_area {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+.recommend_table {
+  text-align: center;
+}
+.recommend_table td {
+  margin: 8px;
+}
+th{
+  color: rgb(30, 56, 130);
+}
 .form_input {
   text-align: center;
   margin-bottom: 40px;
@@ -14,6 +32,9 @@ h2 {
 .form_table {
   margin: 0 auto;
   padding-bottom: 12px;
+}
+form .form_table td {
+  padding: 6px;
 }
 .submit {
 	display: block;
@@ -46,12 +67,8 @@ h2 {
 .content {
   width: fit-content;
   margin: auto;
-  margin-top: 24px;
   margin-bottom: 120px;
   margin-top: 20px;
-}
-form .form_table td {
-  padding: 6px;
 }
 .list {
   background-color: #d4eef1;
@@ -78,9 +95,6 @@ form .form_table td {
 .showed_date {
   color: #a9a9a9;
   text-align: right;
-}
-th {
-	color: rgb(30, 56, 130);
 }
 .select_order_wrapper {
   display: inline-flex;
