--- a/style_list.css
+++ b/style_list.css
@@ -102,6 +102,7 @@ form .form_table td {
   justify-content: flex-end;
   width: 100%;
   gap: 4px;
+  padding-right: 20px;
 }
 select {
   -webkit-appearance: none;
